[package]
authors = ["Heliax AG <hello@heliax.dev>"]
name = "usize-set"
version = "0.10.2"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/anoma/usize-set"
description = "Set data structures optimized to store sparsely distributed usize values"
keywords = ["set", "index-set", "vec", "map", "usize"]
categories = ["no-std", "data-structures"]

[features]
default = []
testing = [
    "serialize-serde",
    "serialize-borsh",
]
serialize-serde = ["serde"]
serialize-borsh = ["borsh"]

[dependencies.serde]
optional = true
version = "1"
default-features = false
features = ["alloc", "derive"]

[dependencies.borsh]
optional = true
version = "1.2.0"
default-features = false
features = ["unstable__schema", "derive"]

[dev-dependencies]
criterion = "0.4"
serde_json = "1.0.127"

[[bench]]
name = "sets"
harness = false
